--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>Preview Demo</title>
 </head>
 
-<h1>Hello World!</h1>
+<iframe src="./build/index.html">
 
-<!-- Webpack -->
-<script src="bundle.js"></script>
+    <!-- Scripts -->
+<script src="main.js"></script>
