--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<DOCTYPE! html>
 
-<h1>Inside frame</h1>
-<div id="viewer">
+<body>
+  <div id="viewer"></div>
+</body>
 
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -11,7 +12,6 @@
   crossorigin="anonymous"></script>
 <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/three.min.js"></script>
 <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/viewer3D.min.js"></script>
-
 
 <!-- Webpack -->
 <script src="bundle.js"></script>
