--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,16 @@
 <DOCTYPE! html>
 
+<title>Preview Demo</title>
+
+<!-- Style -->
+<link rel="stylesheet" href="style.css">
+
 <body>
-  <div id="viewer"></div>
+    <iframe src="build/index.html">
 </body>
 
 <!-- jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-<!-- Autodesk -->
-<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
-  crossorigin="anonymous"></script>
-<script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/three.min.js"></script>
-<script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/viewer3D.min.js"></script>
-
-<!-- Webpack -->
-<script src="bundle.js"></script>
+<!-- Scripts -->
+<script src="script.js"></script>
