Content for demo page added

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,43 @@
 <DOCTYPE! html>
 
-<title>Preview Demo</title>
+    <title>Preview Demo</title>
 
-<!-- Style -->
-<link rel="stylesheet" href="style.css">
+    <!-- Style -->
+    <link rel="stylesheet" href="style.css">
 
-<body>
-    <iframe src="build/index.html">
-</body>
+    <body>
+        <ul class="cart-list">
+            <li class="cart-item">
+                <span class="name">Партер Ряд 3 Место 1</span>
+                <span class="price">1600 Руб.</span>
+                <button name="preview">Посмотреть</button>
+                <button name="remove">Убрать</button>
+            </li>
+            <li class="cart-item">
+                <span class="name">Партер Ряд 3 Место 2</span>
+                <span class="price">1600 Руб.</span>
+                <button name="preview">Посмотреть</button>
+                <button name="remove">Убрать</button>
+            </li>
+            <li class="cart-item">
+                <span class="name">Партер Ряд 3 Место 3</span>
+                <span class="price">1600 Руб.</span>
+                <button name="preview">Посмотреть</button>
+                <button name="remove">Убрать</button>
+            </li>
+        </ul>
+        
+        <form>
+            <span>Сумма: 3200 Руб.</span>
+            <button type="submit">Оплатить</button>
+        </form>
 
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <iframe src="build/index.html">
+    </body>
 
-<!-- Scripts -->
-<script src="script.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+
+    <!-- Scripts -->
+    <script src="script.js"></script>
