Sit on place on selection with corrent camera

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
             <button type="submit">Оплатить</button>
         </form>
 
-        <iframe src="build/index.html">
+        <iframe src="build/index.html" width="800px" height="600px">
     </body>
 
     <!-- jQuery -->
