Preloader for Viewer and website screen added

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
+        <img src="site.jpg" width="100%"/>
         <main>
             <ul class="cart-list">
                 <li class="cart-item">
