VK Share functions

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Preview Demo</title>
 
+        <!-- VK -->
+        <script type="text/javascript" src="https://vk.com/js/api/share.js?93" charset="windows-1251"></script>
+        
         <!-- Style -->
         <link rel="stylesheet" href="style.css">
     </head>
@@ -38,6 +41,7 @@
             <div id="modal">
                 <div class="modal-content">
                     <button class="btn-close">&times;</button>
+                    <div id="vk-share"></div>
                 </div>
             </div>
         </main>
