--- a/public/index.html
+++ b/public/index.html
@@ -17,19 +17,19 @@
                 <li class="cart-item">
                     <span class="name">Партер Ряд 1 Место 2</span>
                     <span class="price">1500 Руб.</span>
-                    <button forgeID="3544" class="btn-preview">Посмотреть</button>
+                    <button placeName="Партер Ряд 1 Место 2" forgeID="3544" class="btn-preview">Посмотреть</button>
                     <button class="btn-remove">Убрать</button>
                 </li>
                 <li class="cart-item">
                     <span class="name">Партер Ряд 7 Место 12</span>
                     <span class="price">1500 Руб.</span>
-                    <button forgeID="2624" class="btn-preview">Посмотреть</button>
+                    <button placeName="Партер Ряд 7 Место 12" forgeID="2624" class="btn-preview">Посмотреть</button>
                     <button class="btn-remove">Убрать</button>
                 </li>
                 <li class="cart-item">
                     <span class="name">Партер Ряд 4 Место 21</span>
                     <span class="price">1500 Руб.</span>
-                    <button forgeID="1584" class="btn-preview">Посмотреть</button>
+                    <button placeName="Партер Ряд 4 Место 21" forgeID="1584" class="btn-preview">Посмотреть</button>
                     <button class="btn-remove">Убрать</button>
                 </li>
             </ul>
