--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
         
         <!-- Style -->
         <link rel="stylesheet" href="style.css">
+        <!-- Material Icons -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
 
     <body>
@@ -37,12 +39,14 @@
             </form>
             <div id="modal">
                 <div class="modal-content">
-                    <button class="btn-close">&times;</button>
-                    <div id="vk-share"></div>
+                    <div class="modal-sidebar">
+                        <button class="btn-modal btn-close"><i class="material-icons">close</i></button>
+                        <button class="btn-modal btn-share" id="vk-share"></button>
+                    </div>
                 </div>
             </div>
         </main>
-        
+
         <!-- VK -->
         <script type="text/javascript" src="https://vk.com/js/api/share.js?93" charset="windows-1251"></script>
         <!-- jQuery -->
