Static event changing + scroll overflow

--- a/public/moscow.html
+++ b/public/moscow.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>Preview Demo</title>
-
+        
         <!-- Style -->
         <link rel="stylesheet" href="style.css">
         <!-- Material Icons -->
@@ -11,32 +11,33 @@
 
     <body>
         <div id="headbar">
-        <select id="event-switcher">
-            <option selected>Сван</option>
-            <option>Фро</option>
-            <option>Страна Москва</option>
-        </select>
-        </div>
+            <select id="event-switcher">
+                <option>Сван</option>
+                <option>Фро</option>
+                <option selected>Страна Москва</option>
+            </select>
+            </div>
 
-        <img src="site.jpg" width="100%" />
+            <img src="site.jpg" width="100%" />
+
         <main>
             <ul class="cart-list">
                 <li class="cart-item">
-                    <span class="name">Партер Ряд 3 Место 12</span>
+                    <span class="name">Партер Ряд 3 Место 4</span>
                     <span class="price">1500 Руб.</span>
-                    <button event="1" placeName="Партер Ряд 3 Место 12" forgeID="3140" class="btn-preview">Посмотреть</button>
+                    <button event="3" placeName="Партер Ряд 3 Место 4" forgeID="2900" class="btn-preview">Посмотреть</button>
                     <button class="btn-remove">Убрать</button>
                 </li>
                 <li class="cart-item">
-                    <span class="name">Партер Ряд 8 Место 12</span>
+                    <span class="name">Партер Ряд 8 Место 16</span>
                     <span class="price">1500 Руб.</span>
-                    <button event="1" placeName="Партер Ряд 8 Место 12" forgeID="2620" class="btn-preview">Посмотреть</button>
+                    <button event="3" placeName="Партер Ряд 8 Место 16" forgeID="1260" class="btn-preview">Посмотреть</button>
                     <button class="btn-remove">Убрать</button>
                 </li>
                 <li class="cart-item">
-                    <span class="name">Партер Ряд 4 Место 18</span>
+                    <span class="name">Партер Ряд 5 Место 25</span>
                     <span class="price">1500 Руб.</span>
-                    <button event="1" placeName="Партер Ряд 4 Место 18" forgeID="1020" class="btn-preview">Посмотреть</button>
+                    <button event="3" placeName="Партер Ряд 5 Место 25" forgeID="1340" class="btn-preview">Посмотреть</button>
                     <button class="btn-remove">Убрать</button>
                 </li>
             </ul>
@@ -48,9 +49,7 @@
             <div id="modal">
                 <div class="modal-content">
                     <div class="modal-sidebar">
-                        <button class="btn-modal btn-close">
-                            <i class="material-icons">close</i>
-                        </button>
+                        <button class="btn-modal btn-close"><i class="material-icons">close</i></button>
                         <button class="btn-modal btn-share" id="vk-share"></button>
                     </div>
                 </div>
